--- a/ML_Debt.ipynb
+++ b/ML_Debt.ipynb
@@ -1696,6 +1696,28 @@
     "\n",
     "# Most population correlate but exception in Georgia, Florida and Massaschusette, Again with state there is much more data needed."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c45491a4-6fc6-4f1b-9f1c-b260de6449c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#variable needed all together\n",
+    "\n",
+    "#the one from the CFPB\n",
+    "#untimely\n",
+    "#map the state into three 6 states and other regions based on populations\n",
+    "#map the issue in to different category\n",
+    "\n",
+    "#the one for Ipsim\n",
+    "#income\n",
+    "#age\n",
+    "#family\n",
+    "#demographic\n",
+    "#population density"
+   ]
   }
  ],
  "metadata": {
