try upload this via mint gui

--- a/ML_Debt.ipynb
+++ b/ML_Debt.ipynb
@@ -1718,6 +1718,16 @@
     "#demographic\n",
     "#population density"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1a5b5e-ba51-45ab-9cf7-83d4ebe53c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing upload in linux Mint \n"
+   ]
   }
  ],
  "metadata": {
@@ -1736,7 +1746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
